| Summary: | ASTERISK-25961: tests/channels/SIP/sip_tls_call: Sporadic crash when running test | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-04-25 12:22:07 | Date Closed: | 2016-04-27 08:51:39 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The tests/channel/SIP/sip_tls_call currently sporadically crashes when the test is over. This is caused by the TCP threads not terminating fast enough, causing them to try to unlink from a container that has since been destroyed.
The unload process should ideally wait until all the threads have been terminated before moving on. | ||
| Comments: | |||